--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,11 +4,25 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:BankApp"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Flyout">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar>
+        <ShellContent
+            Title="Hello Reptiloid"
+            Icon="home.png"
+            ContentTemplate="{DataTemplate local:MainPage}"
+            Route="MainPage"/>
 
+        <ShellContent
+            Title="Hello GAY"
+            Icon="id_card.png"
+            ContentTemplate="{DataTemplate local:MainPage}"
+            Route="MainPage"/>
+        
+        <ShellContent
+            Title="Hello GAY"
+            Icon="safebox.png"
+            ContentTemplate="{DataTemplate local:MainPage}"
+            Route="MainPage"/>
+    </TabBar>
 </Shell>
